--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
             text-align: center;
             background: #ddd;
             margin-top: 20px;
+        justify-content: center;
+    align-items: center;
+    background: #ddd;
+
         } */
 
         /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
